sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:4: error: '=' expected but ';' found.
	for (i<-0 to lgr-2) {
^AlgBubbleSort1:5: error: '(' expected but identifier found.
		if i<i+1
                   ^